# fitnotes-web

./: .env.dockhand.example  .env.example  .gitignore  Dockerfile  FITNOTES_FEATURES.md  IMPLEMENTATION_PLAN.md  README.md  TODOS.md  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.agent/: BACKUP_EXPORT_IMPLEMENTATION.md  DARK_MODE_IMPLEMENTATION.md  DATABASE_SCHEMA.md  PREDEFINED_SETS_IMPLEMENTATION.md  PWA-CHECKLIST.md  PWA-IMPLEMENTATION.md
.claude/plans/: lucky-launching-fox.md
.github/workflows/: containers.yml
.omc/: continuation-count.json  notepad.md
.omc/autopilot/: plan.md  spec.md
.omc/state/: autopilot-state.json
backend/: Dockerfile  go.mod  go.sum  main.go
backend/db/: db.go  seeder.go
backend/handlers/: api_key_handler.go  auth_handler.go  (+13 more)
docs/: android-tauri-build.md  body-weight-and-withings.md  read-only-api.md  supersets-and-sync.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
mobile/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/migrations/: 01_init_sqlite.sql
mobile/src-tauri/src/: lib.rs  main.rs
public/: offline.html  sw.js
scripts/: backfill_workout_routines_apply.sql  backfill_workout_routines_preview.sql  gen_oidc_client_secret.go  generate-icons-sharp.js  generate-icons.js  reset-db.sh  start-db.sh  stop-db.sh  test_workout_routines_sync.py
src/: middleware.ts
tests/: setup.ts
(+225 files in other folders)
