[package]
name = "fitnotes"
version = "0.1.0"
description = "FitNotes Reborn companion Tauri v2 app"
authors = ["DeepMind Coding Team"]
edition = "2021"

[lib]
name = "fitnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.37", features = ["full"] }
hex = "0.4"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }
